Reformatting all java files